--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/votacao
+spring.datasource.url=jdbc:mysql://mysql-standalone:3306/votacao
 spring.datasource.username=registrovotacao
 spring.datasource.password=registrovotacao
 
