--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://mysql-standalone:3306/votacao
 spring.datasource.username=registrovotacao
 spring.datasource.password=registrovotacao
-
-spring.jpa.hibernate.ddl-auto=update
-
-server.error.include-stacktrace=never
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
