change user connection for database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
 version: '3.3'
-
 services:
-    #service 1: definition of mysql database
     db:
       image: mysql-standalone
       container_name: mysql-standalone   
@@ -9,6 +7,8 @@ services:
         context: .    
         dockerfile: Dockerfile_mysql
       environment:
+        - MYSQL_USER=registrovotacao
+        - MYSQL_PASSWORD=registrovotacao
         - MYSQL_ROOT_PASSWORD=password
         - MYSQL_DATABASE=votacao
       ports:
@@ -17,7 +17,6 @@ services:
         - votacao-network
 
     
-    #service 3: definition of your spring-boot app 
     customerservice:
       image: votacao-app
       container_name: votacao-app-container
@@ -33,8 +32,8 @@ services:
         - db
       environment:
         SPRING_DATASOURCE_URL: jdbc:mysql://mysql-standalone:3306/votacao
-        SPRING_DATASOURCE_USERNAME: root
-        SPRING_DATASOURCE_PASSWORD: password
+        SPRING_DATASOURCE_USERNAME: registrovotacao
+        SPRING_DATASOURCE_PASSWORD: registrovotacao
 
 networks:
   votacao-network: 
